# BL5340_Sample_Apps

./: .clang-format  .gitignore  README.md  build_all.sh
application_core_common/: Kconfig  README.md  readme.md
application_core_common/src/: bl5340_i2c.c  bl5340_i2c.h  bl5340_i2c_bme680.c  bl5340_i2c_ft5336.c  bl5340_i2c_ft5336.h  bl5340_i2c_gt24c256c.c  bl5340_i2c_lis3dh.c  bl5340_i2c_mcp4725.c  bl5340_i2c_mcp7904n.c  bl5340_i2c_mcp7904n.h  bl5340_i2c_tca9538.c  bl5340_oscillators.c  bl5340_oscillators.h  bl5340_qspi_mx25r6435.c  bl5340_spi_enc424j600.h  bl5340_vregh.c
common/application_core_common/: CMakeLists.txt  README.md
common/application_core_common/src/: bl5340_gpio.c  bl5340_gpio.h  bl5340_i2c.c  bl5340_i2c_bme680.c  bl5340_i2c_bme680.h  bl5340_i2c_ft5336.c  bl5340_i2c_gt24c256c.c  bl5340_i2c_gt24c256c.h  bl5340_i2c_lis3dh.c  bl5340_i2c_lis3dh.h  bl5340_i2c_mcp4725.c  bl5340_i2c_mcp4725.h  bl5340_i2c_mcp7904n.c  bl5340_i2c_tca9538.c  bl5340_i2c_tca9538.h  bl5340_nfc.c  bl5340_nfc.h  bl5340_oscillators.c  bl5340_oscillators.h  bl5340_qspi_mx25r6435.c  bl5340_qspi_mx25r6435.h  bl5340_rpc_server_handlers.c  bl5340_spi_enc424j600.c  bl5340_spi_ili9340.c  bl5340_spi_ili9340.h  bl5340_vregh.c  bl5340_vregh.h  main.c
common/dtm_network_core_common/: README.md
common/dtm_network_core_common/src/: dtm.c  dtm_hw.c  dtm_hw.h  dtm_hw_config.h  main.c
common/rpc/: Kconfig
common/rpc/client/: bl5340_rpc_client_handlers.c  bl5340_rpc_client_handlers.h  bl5340_rpc_client_interface.c  bl5340_rpc_client_interface.h
common/rpc/server/: bl5340_rpc_server_interface.c  bl5340_rpc_server_interface.h
docs/: README.md
dtm/: README.md  readme.md
dtm/dtm_application/: CMakeLists.txt  Kconfig  README.md  bl5340_dvk.overlay  prj.conf
dtm/dtm_dvk/: README.md  readme.md
dtm/dtm_dvk/dtm_dvk_application/: CMakeLists.txt  Kconfig  README.md  prj.conf  readme.md
dtm/dtm_dvk/dtm_dvk_network/: CMakeLists.txt  README.md  readme.md
dtm/dtm_module/: README.md  readme.md
dtm/dtm_module/dtm_module_application/: CMakeLists.txt  README.md  readme.md
dtm/dtm_network/: CMakeLists.txt  Kconfig  README.md  prj.conf
dtm_network_core_common/: CMakeLists.txt  Kconfig  README.md  readme.md
dtm_network_core_common/src/: dtm.h  main.c
ess_demo/: CMakeLists.txt  README.rst  prj.conf
ess_demo/boards/: bl5340_dvk_cpuapp.conf
ess_demo/docs/: ble.md
ess_demo/include/: lcd.h
ess_demo/src/: lcd.c  main.c  sensor.c
ess_service/: CMakeLists.txt  README.rst  prj.conf
ess_service/boards/: bl5340_dvk_cpuapp.conf
ess_service/include/: sensor.h
ess_service/src/: dewpoint.c  dewpoint.h  lcd.c  main.c  sensor.c
rpc/: CMakeLists.txt
rpc/client/: bl5340_rpc_client_handlers.c  bl5340_rpc_client_interface.c  bl5340_rpc_client_interface.h
rpc/common/: bl5340_rpc_ids.h
rpc/server/: bl5340_rpc_server_interface.c  bl5340_rpc_server_interface.h
vib_demo/: CMakeLists.txt  Kconfig  README.md  prj.conf
vib_demo/include/: application.h  lcd.h
vib_demo/src/: lcd.c  logger.c  main.c
vib_display_demo/: CMakeLists.txt  Kconfig  README.md  prj.conf
vib_display_demo/boards/: bl5340_dvk_cpuapp.conf  bl5340pa_dvk_cpuapp.conf
vib_display_demo/include/: application.h  lcd.h
vib_display_demo/src/: lcd.c  logger.c  main.c
(+6 files in other folders)
